--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/3b44d539fe.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Julee&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
 <body>
     <div class="container">
         <i class="fa-solid fa-bars bar-icon"></i>
         <input type="text" class="location" placeholder="Enter your city">
-        <button>Search</button>
-        <h1>NAIROBI, KE</h1>
+        <button id="search-btn">Search</button>
+        <button id="current-location">Current Location</button>
+        <h1 id="city-name">NAIROBI, KE</h1>
         <h4>☁️</h4>
         <div class="content">
           <div class="day"></div>
           <div class="time"></div>
 
         </div>
-        <h3>14<a href="#">℃</a>|
+        <h3><a href="#"><strong id="temperature"></strong>℃</a>|
           <a href="#">F</a></h3>
 
         <div class="row">
