Made changes to search bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <input type="text" class="location" placeholder="Enter your city">
         <button id="search-btn">Search</button>
         <button id="current-location">Current Location</button>
-        <h1 id="city-name">NAIROBI, KE</h1>
+        <h1 id="city-name">NAIROBI</h1>
         <h4>☁️</h4>
         <div class="content">
           <div class="day"></div>
