added github link

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
             </div>
         </div>          
     </div>
+    <div class="github-link">
+      <a href="https://github.com/elidahayiemba/Weather-App">Github Link</a>
+
+
+    </div>
+    
 
     <script src="main.js"></script>
     
